--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": ["src", "migrations"],
   "exclude": ["node_modules"]
 }
