--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   database-layer:
     image: postgres
@@ -21,6 +19,8 @@ services:
       - database-layer
     environment:
       - NODE_ENV=development
+      - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_INTERVAL=1000
     build:
       context: .
       dockerfile: Dockerfile.dev
